--- a/src/css/main.css
+++ b/src/css/main.css
@@ -165,6 +165,59 @@
   font-weight: bold;
 }
 
+/* contak */
+/* styles.css */
+.contact-container {
+  padding: 2rem;
+  background-color: rgb(30, 30, 30); /* Warna background */
+  color: #fff; /* Warna teks */
+}
+
+.contact-container h2 {
+  margin-bottom: 1rem;
+}
+
+.contact-container .form-control {
+  background-color: #444;
+  color: #fff;
+  border: none;
+}
+
+.contact-container .form {
+  border-radius: 5px;
+}
+
+.contact-container .btn-primary {
+  background-color: #ff0000;
+  border: none;
+  transition: color 0.3s ease;
+}
+
+.contact-container .btn-primary:hover {
+  background-color: rgb(200, 0, 0);
+}
+
+.contact-container .form-grup {
+  background-color: blue;
+}
+
+
+.contact-container .form-label {
+  color: #fff;
+}
+
+.contact-container .contak-sosial {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.contact-container .contak-sosial a {
+  color: white; /* Sesuaikan warna ikon sesuai keinginan */
+  font-size: 24px;
+  margin: 10px 30px;
+  text-decoration: none;
+}
+
 
 
   
